--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <p>Junior Cybersecurity Analyst | IT & Risk Management</p>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#certifications">Certifications</a>
-    <a href="#contact">Contact</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="certifications.html">Certifications</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
   <section id="about">
     <h2>About Me</h2>
