--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
       </ul>
     </div>
   </section>
+<section id="resume">
+  <h2>My Resume</h2>
+  <div class="card">
+    <p>
+      <a href="Niknaz_Sadehvandi_Resume.pdf" download>
+        <button style="padding:10px 20px; background:#13294b; color:#fff; border:none; border-radius:5px; cursor:pointer;">
+          📄 Download My Resume
+        </button>
+      </a>
+    </p>
+  </div>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
