--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Niknaz Sadehvandi</h1>
-    <p>Junior Cybersecurity Analyst | IT & Risk Management</p>
-  </header>
+<header>
+  <h1>Niknaz Sadehvandi</h1>
+  <p>Junior Cybersecurity Analyst | IT & Risk Management</p>
+  <p>
+    <a href="Niknaz_Sadehvandi_Resume.pdf" download>
+      <button style="padding:10px 20px; background:#13294b; color:#fff; border:none; border-radius:5px; cursor:pointer; margin-top:10px;">
+        📄 Download My Resume
+      </button>
+    </a>
+  </p>
+</header>
 
  <nav>
   <a href="index.html">Home</a>
