--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </a>
   </p>
 </header>
-
- <nav>
+<nav>
   <a href="index.html">Home</a>
   <a href="projects.html">Projects</a>
   <a href="certifications.html">Certifications</a>
   <a href="contact.html">Contact</a>
+  <a href="#resume">Resume</a>
 </nav>
 
   <section id="about">
