--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
     main { padding: 40px; max-width: 900px; margin: auto; }
     h2 { color: #13294b; }
     .card { background: #fff; padding: 20px; margin: 20px 0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .card img { max-width: 100%; border-radius: 8px; margin-top: 12px; }
     footer { text-align: center; padding: 20px; background: #0a1f44; color: #fff; margin-top: 40px; }
   </style>
 </head>
@@ -40,6 +41,7 @@
         <li>Identified persistence mechanisms, unauthorized accounts, and SSH exfiltration</li>
         <li>Produced reports aligned with NIST standards</li>
       </ul>
+      <img src="assets/forensics-lab.png" alt="Screenshot of forensic tools (FTK Imager, Autopsy) analysis">
     </div>
 
     <div class="card">
@@ -49,6 +51,7 @@
         <li>Improved detection rates by 30% across the organization</li>
         <li>Helped SOC team triage incidents faster</li>
       </ul>
+      <img src="assets/splunk-dashboard.png" alt="Splunk dashboard screenshot showing improved detection">
     </div>
 
     <div class="card">
@@ -58,6 +61,7 @@
         <li>Supported 5+ annual audits</li>
         <li>Documented control procedures, reducing audit prep time by 20%</li>
       </ul>
+      <img src="assets/audit-process.png" alt="Audit process flow diagram">
     </div>
   </main>
 
@@ -66,4 +70,5 @@
   </footer>
 </body>
 </html>
+
 
