--- a/projects.html
+++ b/projects.html
@@ -34,15 +34,27 @@
   <main>
     <h2>Featured Projects</h2>
 
-    <div class="card">
-      <h3>Digital Forensics &amp; Incident Response Lab</h3>
-      <ul>
-        <li>Investigated intrusions using FTK Imager, Autopsy, and Autoruns</li>
-        <li>Identified persistence mechanisms, unauthorized accounts, and SSH exfiltration</li>
-        <li>Produced reports aligned with NIST standards</li>
-      </ul>
-      <img src="assets/forensics-lab.png" alt="Screenshot of forensic tools (FTK Imager, Autopsy) analysis">
-    </div>
+   <div class="card">
+  <h3>Digital Forensics & Incident Response Lab (UMGC)</h3>
+  <p><strong>Jan 2025 – Mar 2025</strong></p>
+  <ul>
+    <li>Investigated intrusions using forensic tools (FTK Imager, Autopsy, Autoruns)</li>
+    <li>Identified persistence mechanisms, unauthorized accounts, and SSH exfiltration</li>
+    <li>Documented findings aligned with NIST standards and IT General Controls</li>
+  </ul>
+
+  <!-- Thumbnail -->
+  <img src="assets/forensics-thumb.png" alt="Forensics Lab Thumbnail"
+       style="max-width:100%; border-radius:12px; margin:15px 0;">
+
+  <!-- PDF button -->
+  <p>
+    <a href="assets/forensics-report.pdf" target="_blank"
+       style="padding:10px 16px; background:#13294b; color:#fff; border-radius:6px; text-decoration:none;">
+      📄 View Project Report (PDF)
+    </a>
+  </p>
+</div>
 
     <div class="card">
       <h3>Splunk Threat Intelligence Integration</h3>
