--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact | Niknaz Sadehvandi</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f7f9fc; color: #333; }
-    header { background-color: #0a1f44; color: #fff; padding: 20px; text-align: center; }
-    nav { background: #13294b; padding: 10px; text-align: center; }
-    nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    section { padding: 40px; max-width: 900px; margin: auto; }
-    h2 { color: #13294b; }
-    .card { background: #fff; padding: 20px; margin: 20px 0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    footer { text-align: center; padding: 20px; background: #0a1f44; color: #fff; margin-top: 40px; }
-  </style>
+ <style>
+  body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f7f9fc; color: #333; }
+  header { background-color: #0a1f44; color: #fff; padding: 20px; text-align: center; }
+  nav { background: #13294b; padding: 10px; text-align: center; }
+  nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
+  nav a:hover { text-decoration: underline; }
+  section { padding: 40px; max-width: 900px; margin: auto; }
+  h2 { color: #13294b; }
+  .card { background: #fff; padding: 20px; margin: 20px 0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+  footer { text-align: center; padding: 20px; background: #0a1f44; color: #fff; margin-top: 40px; }
+
+  /* ✅ New styles for icons + links */
+  i {
+    margin-right: 8px;
+    color: #13294b; /* default navy for icons */
+  }
+
+  a {
+    color: #13294b;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    color: #0a1f44; /* darker hover effect */
+  }
+</style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
@@ -30,13 +48,33 @@
   </nav>
 
   <section>
-    <h2>Get in Touch</h2>
-    <div class="card">
-      <p><strong>Email:</strong> <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a></p>
-      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">LinkedIn Profile</a></p>
-      <p><strong>GitHub:</strong> <a href="https://github.com/niknaz-65" target="_blank">https://github.com/niknaz-65</a></p>
-    </div>
-  </section>
+  <h2>Get in Touch</h2>
+  <div class="card">
+    <p>
+      <i class="fas fa-envelope"></i>
+      <strong>Email:</strong> 
+      <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a>
+    </p>
+
+    <p>
+      <i class="fab fa-linkedin"></i>
+      <strong>LinkedIn:</strong> 
+      <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">LinkedIn Profile</a>
+    </p>
+
+    <p>
+      <i class="fab fa-github"></i>
+      <strong>GitHub:</strong> 
+      <a href="https://github.com/niknaz-65" target="_blank">github.com/niknaz-65</a>
+    </p>
+
+    <p>
+      <i class="fas fa-globe"></i>
+      <strong>Website:</strong> 
+      <a href="https://niknaz-65.github.io/" target="_blank">niknaz-65.github.io</a>
+    </p>
+  </div>
+</section>
 
   <footer>
     <p>© 2025 Niknaz Sadehvandi | Cybersecurity Portfolio</p>
