--- a/contact.html
+++ b/contact.html
@@ -56,23 +56,25 @@
       <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a>
     </p>
 
-    <p>
-      <i class="fab fa-linkedin"></i>
-      <strong>LinkedIn:</strong> 
-      <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">LinkedIn Profile</a>
-    </p>
+  <p>
+  <i class="fas fa-envelope"></i>
+  <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a>
+</p>
 
-    <p>
-      <i class="fab fa-github"></i>
-      <strong>GitHub:</strong> 
-      <a href="https://github.com/niknaz-65" target="_blank">github.com/niknaz-65</a>
-    </p>
+<p>
+  <i class="fab fa-linkedin"></i>
+  <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank">LinkedIn Profile</a>
+</p>
 
-    <p>
-      <i class="fas fa-globe"></i>
-      <strong>Website:</strong> 
-      <a href="https://niknaz-65.github.io/" target="_blank">niknaz-65.github.io</a>
-    </p>
+<p>
+  <i class="fab fa-github"></i>
+  <a href="https://github.com/niknaz-65" target="_blank">github.com/niknaz-65</a>
+</p>
+
+<p>
+  <i class="fas fa-globe"></i>
+  <a href="https://niknaz-65.github.io/" target="_blank">niknaz-65.github.io</a>
+</p>
   </div>
 </section>
 
