--- a/projects.html
+++ b/projects.html
@@ -3,84 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Niknaz Sadehvandi | Projects</title>
+  <title>Projects | Niknaz Sadehvandi</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f7f9fc; color: #333; }
     header { background-color: #0a1f44; color: #fff; padding: 20px; text-align: center; }
-    header h1 { margin: 0; }
     nav { background: #13294b; padding: 10px; text-align: center; }
     nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
-    main { padding: 40px; max-width: 900px; margin: auto; }
+    section { padding: 40px; max-width: 900px; margin: auto; }
     h2 { color: #13294b; }
     .card { background: #fff; padding: 20px; margin: 20px 0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .card img { max-width: 100%; border-radius: 8px; margin-top: 12px; }
     footer { text-align: center; padding: 20px; background: #0a1f44; color: #fff; margin-top: 40px; }
+
+    /* ====== Global Button Base ====== */
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      padding: 12px 18px;
+      border-radius: 6px;
+      font-weight: 500;
+      text-decoration: none;
+      transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease, color 0.3s ease;
+      cursor: pointer;
+    }
+
+    /* ====== Primary Button (Navy Background) ====== */
+    .btn-primary {
+      background: #13294b;
+      color: #fff;
+    }
+
+    .btn-primary:hover {
+      background: #0a1f44;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    /* ====== Secondary Button (Outlined) ====== */
+    .btn-secondary {
+      background: transparent;
+      color: #13294b;
+      border: 2px solid #13294b;
+    }
+
+    .btn-secondary:hover {
+      background: #13294b;
+      color: #fff;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    /* ====== Icon Styling ====== */
+    .btn i {
+      font-size: 1.1rem;
+      transition: transform 0.3s ease;
+    }
+
+    .btn:hover i {
+      transform: scale(1.15);
+    }
+
+    /* 🎨 Brand Colors for Icons */
+    .fa-file-pdf { color: #d93025; }   /* PDF red */
+    .fa-download { color: #4CAF50; }   /* Green for download */
   </style>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
-    <h1>My Cybersecurity Projects</h1>
-    <p>Hands-on Labs | Case Studies | Investigations</p>
+    <h1>My Projects</h1>
+    <p>Hands-on cybersecurity and IT projects</p>
   </header>
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="projects.html" aria-current="page">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="certifications.html">Certifications</a>
     <a href="contact.html">Contact</a>
   </nav>
 
-  <main>
-    <h2>Featured Projects</h2>
-
-   <div class="card">
-  <h3>Digital Forensics & Incident Response Lab (UMGC)</h3>
-  <p><strong>Jan 2025 – Mar 2025</strong></p>
-  <ul>
-    <li>Investigated intrusions using forensic tools (FTK Imager, Autopsy, Autoruns)</li>
-    <li>Identified persistence mechanisms, unauthorized accounts, and SSH exfiltration</li>
-    <li>Documented findings aligned with NIST standards and IT General Controls</li>
-  </ul>
-
-  <!-- Thumbnail -->
-  <img src="assets/forensics-thumb.png" alt="Forensics Lab Thumbnail"
-       style="max-width:100%; border-radius:12px; margin:15px 0;">
-
-  <!-- PDF button -->
-  <p>
-    <a href="assets/forensics-report.pdf" target="_blank"
-       style="padding:10px 16px; background:#13294b; color:#fff; border-radius:6px; text-decoration:none;">
-      📄 View Project Report (PDF)
-    </a>
-  </p>
-</div>
-
+  <section>
+    <h2>Digital Forensics & Incident Response Lab (UMGC)</h2>
     <div class="card">
-      <h3>Splunk Threat Intelligence Integration</h3>
+      <p><strong>Jan 2025 – Mar 2025</strong></p>
       <ul>
-        <li>Integrated threat intelligence feeds into Splunk</li>
-        <li>Improved detection rates by 30% across the organization</li>
-        <li>Helped SOC team triage incidents faster</li>
+        <li>Investigated intrusions using forensic tools (FTK Imager, Autopsy, Autoruns)</li>
+        <li>Identified persistence mechanisms, unauthorized accounts, and SSH exfiltration</li>
+        <li>Documented findings aligned with NIST standards and IT General Controls</li>
       </ul>
-      <img src="assets/splunk-dashboard.png" alt="Splunk dashboard screenshot showing improved detection">
-    </div>
 
-    <div class="card">
-      <h3>ITGC Audit &amp; SOX Compliance</h3>
-      <ul>
-        <li>Executed IT General Controls testing with 100% SOX compliance</li>
-        <li>Supported 5+ annual audits</li>
-        <li>Documented control procedures, reducing audit prep time by 20%</li>
-      </ul>
-      <img src="assets/audit-process.png" alt="Audit process flow diagram">
+      <!-- Thumbnail -->
+      <img src="assets/forensics-thumb.png" alt="Forensics Lab Thumbnail"
+           style="max-width:100%; border-radius:12px; margin:15px 0;">
+
+      <!-- Buttons -->
+      <p>
+        <a href="assets/forensics-report.pdf" target="_blank" class="btn btn-primary">
+          <i class="fas fa-file-pdf"></i> View Report (PDF)
+        </a>
+        <a href="assets/forensics-report.pdf" download class="btn btn-secondary">
+          <i class="fas fa-download"></i> Download
+        </a>
+      </p>
     </div>
-  </main>
+  </section>
 
   <footer>
     <p>© 2025 Niknaz Sadehvandi | Cybersecurity Portfolio</p>
   </footer>
 </body>
 </html>
-
-
