--- a/certifications.html
+++ b/certifications.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Niknaz Sadehvandi | Certifications</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Certifications | Niknaz Sadehvandi</title>
+
+  <meta name="description" content="Cybersecurity certifications earned by Niknaz Sadehvandi." />
+  <meta property="og:title" content="Certifications | Niknaz Sadehvandi" />
+  <meta property="og:description" content="Completed cybersecurity certifications by Niknaz Sadehvandi." />
+  <meta property="og:image" content="assets/site-banner.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://niknaz-65.github.io/certifications.html" />
+
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f7f9fc; color: #333; }
-    header { background-color: #0a1f44; color: #fff; padding: 20px; text-align: center; }
-    nav { background: #13294b; padding: 10px; text-align: center; }
-    nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    section { padding: 40px; max-width: 900px; margin: auto; }
-    h2 { color: #13294b; }
-    .card { background: #fff; padding: 20px; margin: 20px 0; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    footer { text-align: center; padding: 20px; background: #0a1f44; color: #fff; margin-top: 40px; }
+    :root { --navy:#0a1f44; --navy2:#13294b; --ink:#333; --shadow:0 2px 5px rgba(0,0,0,.1); }
+    body{font-family:Arial,sans-serif;margin:0;background:#f7f9fc;color:var(--ink)}
+    header{background:var(--navy);color:#fff;padding:36px 16px;text-align:center}
+    nav{background:var(--navy2);padding:12px;text-align:center}
+    nav a{color:#fff;margin:0 15px;text-decoration:none;font-weight:bold}
+    nav a.active,nav a:hover{text-decoration:underline;text-underline-offset:4px}
+    section{max-width:900px;margin:0 auto;padding:40px 16px}
+    h2{color:var(--navy2);margin:0 0 12px}
+    .card{background:#fff;border-radius:12px;box-shadow:var(--shadow);padding:22px;margin:20px 0}
+    ul.clean{margin:0;padding-left:20px}
+    ul.clean li{margin:8px 0}
+    footer{background:var(--navy);color:#fff;text-align:center;padding:20px;margin-top:40px}
+    a:focus,button:focus{outline:3px solid #ffbf47;outline-offset:2px}
   </style>
 </head>
 <body>
@@ -25,23 +37,22 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
-    <a href="certifications.html">Certifications</a>
+    <a href="certifications.html" class="active">Certifications</a>
     <a href="contact.html">Contact</a>
   </nav>
 
   <section>
     <h2>Completed Certifications</h2>
     <div class="card">
-      <ul>
-        <li>Python Basics for Data Science – IBM (2024)</li>
-        <li>R Programming Fundamentals – Stanford Online (2024)</li>
+      <ul class="clean">
+        <li><strong>Python Basics for Data Science</strong> — IBM (2024)</li>
+        <li><strong>R Programming Fundamentals</strong> — Stanford Online (2024)</li>
       </ul>
     </div>
-    
   </section>
 
   <footer>
-    <p>© 2025 Niknaz Sadehvandi | Cybersecurity Portfolio</p>
+    © 2025 Niknaz Sadehvandi · Cybersecurity Portfolio
   </footer>
 </body>
 </html>
